fix: Improve filtering robustness and type safety
Add null checks to user filtering in UserManager to prevent errors when properties are undefined.
Explicitly type agentStats properties in ReportingDashboard to resolve unknown type errors.
Update i18n paths and add pagination translation for French and English.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -831,7 +831,8 @@
           "number": "Number",
           "duration": "Duration",
           "qualification": "Qualification"
-        }
+        },
+        "pagination": "Page {currentPage} of {totalPages} ({totalRecords} records)"
       }
     },
     "inboundCalls": "Inbound Calls",
