--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -834,7 +834,8 @@
           "number": "Numéro",
           "duration": "Durée",
           "qualification": "Qualification"
-        }
+        },
+        "pagination": "Page {currentPage} sur {totalPages} ({totalRecords} enregistrements)"
       }
     },
     "inboundCalls": "Appels Entrants",
