feat: Implement confirmation modal for script deletion
Replaces the browser's native `window.confirm` with a custom `ConfirmationModal` component for a more integrated user experience. This change also updates localization files to include titles for confirmation dialogs.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -139,7 +139,8 @@
     }
   },
   "alerts": {
-    "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر؟ هذا الإجراء لا يمكن التراجع عنه."
+    "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر؟ هذا الإجراء لا يمكن التراجع عنه.",
+    "confirmDeleteTitle": "تأكيد الحذف"
   },
   "moduleSettings": {
   "descriptions": {
@@ -227,7 +228,8 @@
     "pageCount": "{count, plural, zero {0 صفحات} one {صفحة واحدة} other {# صفحات}}",
     "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا النص؟",
     "usedBy": "مستخدم بواسطة:",
-    "deleteDisabledTooltip": "لا يمكن حذف نص مرتبط بحملة."
+    "deleteDisabledTooltip": "لا يمكن حذف نص مرتبط بحملة.",
+    "confirmDeleteTitle": "تأكيد حذف النص"
   },
   "ivrManager": {
     "createFlow": "إنشاء تدفق",
