refactor: Improve data handling and UI robustness
This commit introduces several improvements to data handling and UI stability across various components.

- `OutboundCampaignsManager`: Added `callHistory` to the component's state and props for better campaign context.
- `ScriptFeature`: Replaced the ConfirmationModal with the native `window.confirm` for script deletion, simplifying the component. Also corrected a module import path by adding the '.ts' extension.
- `UserManager`: Enhanced user filtering robustness by explicitly casting properties to String before calling `toLowerCase`, preventing potential type errors and making filtering more reliable.
- `QualificationsManager`: Refactored the state management for assigned qualification IDs within the `GroupEditModal` to use zero-refresh state management (using `Set` for added/removed IDs), improving performance and consistency.
- `ReportingDashboard`: Defined type aliases for complex data shapes (`SiteStat`, `GroupStat`, `TimesheetItem`) to improve TypeScript inference and code readability.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -139,8 +139,7 @@
     }
   },
   "alerts": {
-    "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر؟ هذا الإجراء لا يمكن التراجع عنه.",
-    "confirmDeleteTitle": "تأكيد الحذف"
+    "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر؟ هذا الإجراء لا يمكن التراجع عنه."
   },
   "moduleSettings": {
   "descriptions": {
@@ -228,8 +227,7 @@
     "pageCount": "{count, plural, zero {0 صفحات} one {صفحة واحدة} other {# صفحات}}",
     "confirmDelete": "هل أنت متأكد أنك تريد حذف هذا النص؟",
     "usedBy": "مستخدم بواسطة:",
-    "deleteDisabledTooltip": "لا يمكن حذف نص مرتبط بحملة.",
-    "confirmDeleteTitle": "تأكيد حذف النص"
+    "deleteDisabledTooltip": "لا يمكن حذف نص مرتبط بحملة."
   },
   "ivrManager": {
     "createFlow": "إنشاء تدفق",
