feat: Implement confirmation modal for destructive actions
Replaces native `window.confirm` with a custom `ConfirmationModal` component for a more consistent and integrated user experience. This change centralizes the confirmation logic within the Zustand store and components, allowing for better control over the modal's appearance and behavior.

This refactor also removes unused state management related to confirmation dialogues from individual components, simplifying their logic.

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -230,8 +230,7 @@
     "pageCount": "{count, plural, =0 {0 page} one {1 page} other {# pages}}",
     "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce script ?",
     "usedBy": "Utilisé par :",
-    "deleteDisabledTooltip": "Impossible de supprimer un script assigné à une campagne.",
-    "confirmDeleteTitle": "Confirmer la suppression du script"
+    "deleteDisabledTooltip": "Impossible de supprimer un script assigné à une campagne."
   },
   "ivrManager": {
     "createFlow": "Créer un Flux",
