feat: Add user deletion confirmation
Implement a confirmation modal before deleting a user. This prevents accidental irreversible deletions.
This change includes:
- Adding a `showConfirmation` prop to `UserManager`.
- Modifying the delete logic to use the new confirmation modal.
- Adding translation keys for the confirmation message in English, French, and Arabic.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -302,7 +302,8 @@
     "delete": {
       "superAdmin": "لا يمكن حذف SuperAdmin.",
       "activeUser": "قم بتعطيل المستخدم قبل حذفه.",
-      "lastAdmin": "لا يمكن حذف آخر مسؤول."
+      "lastAdmin": "لا يمكن حذف آخر مسؤول.",
+      "confirmMessage": "هل أنت متأكد أنك تريد حذف المستخدم {userName}؟ هذا الإجراء لا يمكن التراجع عنه."
     }
   },
   "scriptBuilder": {
