feat: Add active quota translations
Adds translations for the "active quota" feature in agent view across fr, en, and ar locales. This includes titles and card titles with dynamic fields.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -430,6 +430,12 @@
   },
   "agentView": {
     "extension": "رقم داخلي {ext}",
+    "agentView": {
+    "extension": "رقم داخلي {ext}",
+    "activeQuota": {
+      "title": "الحصة النشطة: {field} {operator} \"{value}\"",
+      "cardTitle": "الحصة النشطة"
+    },
     "statuses": {
       "available": "متاح",
       "onCall": "في مكالمة",
