--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -431,6 +431,10 @@
   },
   "agentView": {
     "extension": "Poste {ext}",
+     "activeQuota": {
+      "title": "Quota actif : {field} {operator} \"{value}\"",
+      "cardTitle": "Quota Actif"
+    },
     "statuses": {
       "available": "En Attente",
       "onCall": "En Appel",
