feat: Disable group deletion when members exist
Prevents accidental deletion of groups that still contain members by disabling the delete button and showing a tooltip. This is reflected in both the UI and the i18n files.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -249,7 +249,8 @@
       "name": "Name",
       "count": "Member Count"
     },
-    "noGroups": "No groups have been created."
+    "noGroups": "No groups have been created.",
+    "deleteDisabledTooltip": "Cannot delete a group that contains members."
   },
   "userManager": {
     "title": "User Management",
