refactor: Update application name in translations
Corrects the application name from "EVS Call Pro" to "Call Pro" in all language locale files to reflect branding changes.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -36,7 +36,7 @@
     "invalidCredentials": "بيانات الاعتماد غير صالحة. يرجى التحقق من معرف تسجيل الدخول وكلمة المرور.",
     "disabledAccount": "حسابك معطل. يرجى الاتصال بالمسؤول.",
     "serverError": "حدث خطأ في الخادم. يرجى المحاولة مرة أخرى لاحقًا.",
-    "copyright": "© EVS Call Pro. جميع الحقوق محفوظة."
+    "copyright": "© Call Pro. جميع الحقوق محفوظة."
   },
   "sidebar": {
     "categories": {
