--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -36,7 +36,7 @@
     "invalidCredentials": "Identifiants invalides. Veuillez vérifier votre identifiant et votre mot de passe.",
     "disabledAccount": "Votre compte est désactivé. Veuillez contacter un administrateur.",
     "serverError": "Une erreur serveur est survenue. Veuillez réessayer plus tard.",
-    "copyright": "© EVS Call Pro. Tous droits réservés."
+    "copyright": "© Call Pro. Tous droits réservés."
   },
   "sidebar": {
     "categories": {
